# adm-lin

./: .gitattributes  .gitignore  ADM_Windows_Implementation_Plan.md  Cargo.toml
crates/adm-app/: Cargo.toml  app.manifest  app.rc  build.rs
crates/adm-app/src/: autostart.rs  category.rs  dialogs.rs  engine.rs  gui.rs  ipc_server.rs  lib.rs  main.rs  options.rs  progress.rs  settings.rs  single_instance.rs  state.rs  store.rs  tasks.rs  theme.rs
crates/adm-app/tests/: engine.rs
crates/adm-bridge/: Cargo.toml
crates/adm-bridge/src/: main.rs
crates/adm-core/: Cargo.toml
crates/adm-core/src/: download.rs  error.rs  hls.rs  lib.rs  limiter.rs  platform.rs  probe.rs  sidecar.rs
crates/adm-core/tests/: download.rs
crates/adm-egui/: Cargo.toml
crates/adm-egui/src/: autostart.rs  checksum.rs  clipboard.rs  engine.rs  fileicon.rs  ipc.rs  main.rs  notify.rs  scheduler.rs  settings.rs  store.rs  tasks.rs  tray.rs
crates/adm-ipc/: Cargo.toml
crates/adm-ipc/src/: lib.rs
extension/: README.md  background.js  manifest.json  popup.html  popup.js
packaging/linux/: adm-egui.desktop  adm.spec  install.sh  io.github.s4rt4.adm.yml
tools/: adm-extension-pubkey.b64
tools/icongen/: Cargo.toml
tools/icongen/src/: main.rs
