[package]
name = "adm-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ADM Linux app: egui GUI + in-process engine (Fedora/GNOME port)."

[[bin]]
name = "adm-egui"
path = "src/main.rs"

[dependencies]
adm-core = { path = "../adm-core" }
adm-ipc = { path = "../adm-ipc" }
eframe = "0.34"
egui_extras = { version = "0.34", features = ["svg"] }
resvg = "0.45"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
ksni = { version = "0.3.5", default-features = false, features = ["async-io", "blocking"] }
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# async-std (bukan tokio) agar zbus tetap pakai async-io — selaras dgn tray ksni
# yang juga async-io (fitur tokio akan memaksa zbus global ke tokio → panic tray).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
# Ikon tipe-berkas dari tema ikon sistem (gaya IDM): MIME→nama ikon→path tema.
mime_guess = "2"
freedesktop-icons = "0.4"
# Dekode ikon raster (tema yang pakai PNG); SVG dirender via resvg yang sudah ada.
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tiny_http = "0.12"
