[package]
name = "adm-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "JSON-RPC protocol + LSP-style framing for the ADM bridge<->app channel."

[lib]
name = "adm_ipc"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util"] }
